Fixed an visual bug, which occured on smaller phones. Added Pull Down function to update the wallet screen

--- a/www/css/init.css
+++ b/www/css/init.css
@@ -18,9 +18,23 @@
     margin-bottom: 10px;
 }
 
-.liTitle{
-    font-size: 15px;
-    text-transform: uppercase;
-    font-weight: 600;
+@media (max-width: 425px) {
+    #walletAddress {
+        font-size: 3.6vw;
+    }
+
+    .liTitle {
+        font-size: 5vw;
+        text-transform: uppercase;
+        font-weight: 600;
+    }
+}
+
+@media (min-width: 425px) {
+    .liTitle {
+        font-size: 15px;
+        text-transform: uppercase;
+        font-weight: 600;
+    }
 }
 
